book/tests/snapshots/snapshot__run_display_reference_prql@strings-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/language-features/strings-2.prql
---
prql dialect:generic

derive x = '"hello world"'


