book/tests/snapshots/snapshot__run_display_reference_prql@syntax-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/queries/syntax-0.prql
---
prql dialect:generic

from `employees`
filter `department` == "Product"
select [
  `first_name`,
  `last_name`,
]


