book/tests/snapshots/snapshot__run_display_reference_prql@syntax-1.prql.snap
---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/syntax-1.prql
---
from employees
filter department == "Product"
select [
  first_name,
  last_name,
]



