book/tests/snapshots/snapshot__run_display_reference_prql@syntax-13.prql.snap
---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/syntax-13.prql
---
from `music.albums`



